# NIR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh  testDCT.sh  testDWT.sh  testLSB.sh  testPVD.sh
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/model/compare/base/: CompareAlgorithm.h
src/model/compare/psnr/: PSNR.cpp  PSNR.h
src/model/compare/ssim/: SSIM.cpp  SSIM.h
src/model/core/: Image.cpp  Image.h  Secret.cpp  Secret.h
src/model/io/: ImageLoader.cpp  ImageLoader.h  ImageSaver.cpp  ImageSaver.h
src/model/steganography/base/: StegoAlgorithm.h
src/model/steganography/dct/: DCTEncoder.cpp  DCTEncoder.h
src/model/steganography/dwt/: DWTEncoder.cpp  DWTEncoder.h
src/model/steganography/lsb/: LSBEncoder.cpp  LSBEncoder.h
src/model/steganography/pvd/: PVDEncoder.cpp  PVDEncoder.h
src/view/cli/: CLIParser.cpp  CLIParser.h  Command.h
tests/images/: convert_images.py
tests/images/png/smooth/gradients/: generate_gradients.py
tests/images/png/smooth/solid_colors/: generate_solid.py
tests/secrets/: secret_16k  secret_1k  secret_1m  secret_256k  secret_4k  secret_64k  secret_lorem
